2014-07-29  Brady Eidson  <beidson@apple.com>

        Make WKOriginDataManager actually operate on IndexedDatabases.
        https://bugs.webkit.org/show_bug.cgi?id=135346

        Reviewed by Sam Weinig (and David Kilzer and Alex Christensen)

        * WebCore.exp.in:

2014-07-29  Dan Bernstein  <mitz@apple.com>

        Moved the Cocoa-specific parts of CredentialBase into a Cocoa-specific Credential class.
        Work towards fixing https://bugs.webkit.org/show_bug.cgi?id=135327

        Reviewed by Alexey Proskuryakov.

        No change in functionality.

        * WebCore.exp.in: Updated for functions moved in the class hierarchy.

        * WebCore.xcodeproj/project.pbxproj: Added CredentialCocoa.{h,mm}.

        * platform/network/Credential.h: For Cocoa, include CredentialCocoa.h instead of the generic
        class.
        (WebCore::Credential::Credential): Removed #if CERTIFICATE_CREDENTIALS_SUPPORTED code.

        * platform/network/CredentialBase.cpp:
        (WebCore::CredentialBase::CredentialBase): Changed to use emptyString instead of "", removed
        #if CERTIFICATE_CREDENTIALS_SUPPORTED code.
        (WebCore::CredentialBase::isEmpty): Ditto.
        (WebCore::CredentialBase::compare): Renamed operator== to this, removed
        #if CERTIFICATE_CREDENTIALS_SUPPORTED code, but changed the end to call platformCompare.
        (WebCore::CredentialBase::identity): Deleted.
        (WebCore::CredentialBase::certificates): Deleted.
        (WebCore::CredentialBase::type): Deleted.
        * platform/network/CredentialBase.h: Removed #if CERTIFICATE_CREDENTIALS_SUPPORTED members.
        (WebCore::CredentialBase::platformCompare): Added a base implementation that returns true.
        (WebCore::operator==): Changed to use CredentialBase::compare.

        * platform/network/cocoa/CredentialCocoa.h: Added.
        (WebCore::Credential::Credential):
        * platform/network/cocoa/CredentialCocoa.mm: Added.