@@ -1,3 +1,15 @@
+2014-07-29  Benjamin Poulain  <bpoulain@apple.com>
+
+        VisitedLinkState::determineLinkState should take a reference
+        https://bugs.webkit.org/show_bug.cgi?id=135375
+
+        Reviewed by Sam Weinig.
+
+        * css/StyleResolver.cpp:
+        (WebCore::StyleResolver::State::initElement):
+        * dom/VisitedLinkState.h:
+        (WebCore::VisitedLinkState::determineLinkState):
+
 2014-07-29  Brady Eidson  <beidson@apple.com>
 
         Make WKOriginDataManager actually operate on IndexedDatabases.
